--- a/sobremi.html
+++ b/sobremi.html
@@ -25,7 +25,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item"><a class="nav-link active" href="componentes.html">Inicio</a></li>
+            <li class="nav-item"><a class="nav-link active" href="">Inicio</a></li>
             <li class="nav-item"><a class="nav-link" href="sobremi.html">Sobre mí</a></li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Trabajo</a>
@@ -134,4 +134,5 @@
   <!-- SCRIPTS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
