--- a/sobremi.html
+++ b/sobremi.html
@@ -18,7 +18,7 @@
   <header>
     <nav class="navbar navbar-expand-lg mi-navbar">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="logo.png" width="30" /></a>
+        <a class="navbar-brand" href="#"><img src="./img/logo.png" width="30" /></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -57,7 +57,7 @@
             <i class="fas fa-user"></i> Sobre mí
           </h2>
           <p class="small text-muted">
-            Soy ingeniero en informática con pasión por la automatización, el diseño web y el aprendizaje constructivista. Me encanta integrar tecnología ética en proyectos que generen valor real.
+            Soy ingeniero en informática con pasión por la automatización, diseño web y aprendizaje constructivista. Me encanta integrar tecnología ética en proyectos que generen valor real.
           </p>
         </div>
       </div>
@@ -65,7 +65,7 @@
       <!-- Imagen al lado -->
       <div class="col-md-6 ">
         <div class="p-4 border-start border-5 border-primary bg-white shadow-sm rounded transition text-center">
-          <img src="Anime-2.jpg" alt="Fotografía de Gerardo en su graduación" class="img-fluid rounded">
+          <img src="./img/Anime-2.jpg" alt="Fotografía de Gerardo en su graduación" class="img-fluid rounded">
         </div>
       </div>
     </div>
@@ -136,4 +136,5 @@
 </body>
 
 </html>
+
 
